// catalog schema
// GeneratedAtUtc: 2026-03-15T13:29:33Z

Table catalog.categories {
  Id uuid [pk,not null]
  Key varchar(50) [not null]
  Name varchar(100) [not null]
  SortOrder integer [not null]
  IsActive boolean [not null]
}

Table catalog.inventory_items {
  ProductId uuid [pk,not null]
  OnHand integer [not null]
  Reserved integer [not null]
  Version integer [not null]
  UpdatedAtUtc timestamptz [not null]
}

Table catalog.inventory_transactions {
  Id uuid [pk,not null]
  ProductId uuid [not null]
  Type varchar(32) [not null]
  QuantityDelta integer [not null]
  OnHandAfter integer [not null]
  ReservedAfter integer [not null]
  Note varchar(512)
  CreatedAtUtc timestamptz [not null]
}

Table catalog.location_inventory_items {
  Id uuid [pk,not null]
  ProductId uuid [not null]
  LocationId uuid [not null]
  OnHand integer [not null]
  Version integer [not null]
  UpdatedAtUtc timestamptz [not null]
}

Table catalog.location_inventory_transfers {
  Id uuid [pk,not null]
  ProductId uuid [not null]
  FromLocationId uuid [not null]
  ToLocationId uuid [not null]
  Quantity integer [not null]
  Note varchar(512)
  CreatedAtUtc timestamptz [not null]
  ReceivedAtUtc timestamptz
  ShippedAtUtc timestamptz
  Status varchar(20) [not null]
}

Table catalog.products {
  Id uuid [pk,not null]
  Name varchar(200) [not null]
  Description varchar(2000) [not null]
  Price numeric(18,2) [not null]
  IsPublished boolean [not null]
  CreatedAtUtc timestamptz [not null]
  UpdatedAtUtc timestamptz [not null]
  CategoryId uuid [not null]
}

Table catalog.stock_locations {
  Id uuid [pk,not null]
  Code varchar(50) [not null]
  Name varchar(100) [not null]
  Type varchar(50) [not null]
  IsActive boolean [not null]
  CreatedAtUtc timestamptz [not null]
}

Ref: catalog.inventory_items.ProductId > catalog.products.Id
Ref: catalog.products.CategoryId > catalog.categories.Id
